welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: Missing closing brace `}' assumed here
override def run() {
^Array2:2: error: expected start of definition
override def run() {
         ^